--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,12 @@
         android:id="@+id/recycler_view"
         tools:listitem="@layout/note_items"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add"
+        android:layout_gravity="end|bottom"
+        android:id="@+id/button_add_note"
+        android:layout_margin="32dp"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
